--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,142 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* Home.css */
+
+.home-container {
+  padding: 1rem;
+}
+
+.article-list {
+  width: 100%;
+  max-width: 800px; 
+  margin: 0 auto; 
+}
+
+.header {
+  width: 100%;
+  max-width: 800px; 
+  margin: 0 auto; 
+  padding: 1rem 0; 
+}
+
+.article-card {
+  transition: transform 0.3s ease, box-shadow 0.3s ease; 
+  display: flex;
+  width: 100%;
+  margin-bottom: 1rem;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.article-card:hover {
+  transform: translateY(-5px); 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+}
+
+.article-text {
+  flex-grow: 1;
+  padding: 1rem;
+}
+
+.title {
+  font-size: 1.25rem;
+  margin-bottom: 0.5rem;
+}
+
+.description {
+  font-size: 1rem;
+  margin-bottom: 1rem;
+}
+
+.article-footer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.thumbnail-container {
+  flex-shrink: 0; 
+}
+
+.thumbnail {
+  width: 100px; 
+  height: 100px; 
+  object-fit: cover; 
+  margin-left: 1rem;
+}
+
+.text-muted {
+  font-size: 0.875rem;
+}
+
+/* ArticlePage.css */
+
+.article-page {
+  padding: 1rem;
+  max-width: 800px; 
+  margin: 0 auto; 
+}
+
+.author-and-date {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.author {
+  margin: 0;
+}
+
+.date {
+  margin: 0;
+  font-style: italic;
+  color: #666; 
+}
+
+.article-page img {
+  width: 100%;
+  height: auto;
+  margin: 1rem 0; 
+}
+
+.reaction-buttons {
+  display: flex;
+  gap: 10px; 
+}
+
+.like-button,
+.dislike-button {
+  border: none;
+  color: white; 
+  padding: 10px 20px; 
+  font-size: 1rem; 
+  border-radius: 50rem; 
+  cursor: pointer; 
+  display: flex;
+  align-items: center;
+  gap: 5px; 
+  background-color: #0d6efd; 
+}
+
+.dislike-button {
+  background-color: #dc3545; 
+}
+
+/*icon sizes */
+.fa-thumbs-up,
+.fa-thumbs-down {
+  font-size: 1.2rem;
+}
+
+.like-button.active, .dislike-button.active {
+  background-color: #007bff; 
+  color: white;
+}
+
+.like-button, .dislike-button {
+  /* Initial button styling */
+  border: 1px solid #ddd;
+  background-color: #f8f9fa;
+  color: #333;
+}
